feat: adjust theme colors

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,7 +4,7 @@
 .header-container {
   /* standard padding for header */
   padding: 15px 20px;
-  background-color: #240B36;
+  background-color: #351150;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
   &.nav-layout {
