--- a/src/components/core/searchbar/searchbar.scss
+++ b/src/components/core/searchbar/searchbar.scss
@@ -3,8 +3,8 @@
 .searchbar-container {
   display: flex;
   padding: 0.375rem;
-  border: 1px solid black;
-  background-color: #391155;
+  //border: 1px solid black;
+  background-color: #441664;
   color: #e3e3e3;
 
   svg {
@@ -16,7 +16,7 @@
   @include default-text;
   padding-left: .5rem;
   border: none;
-  background-color: #391155;
+  background-color: #441664;
   color: #e3e3e3;
 
   &:hover, &:focus, &:target, &:active, &:focus-visible {
