--- a/src/styles/util.scss
+++ b/src/styles/util.scss
@@ -1,4 +1,22 @@
-@mixin large-mobile-view(){
+@mixin extra-large-laptop-view() {
+    @media only screen and (min-width: 1440px) and (max-width: 2560px) {
+        @content;
+    }
+}
+
+@mixin large-laptop-view() {
+    @media only screen and (min-width: 1024) and (max-width: 1440) {
+        @content;
+    }
+}
+
+@mixin laptop-view() {
+    @media only screen and (min-width: 768px) and (max-width: 1024px) {
+        @content;
+    }
+}
+
+@mixin large-mobile-view() {
     @media only screen and (max-width: 768px) {
         @content;
     }
