feat: refactor table of contents into list container that supports toc and sidebar

--- a/src/components/core/list-container/list-container.scss
+++ b/src/components/core/list-container/list-container.scss
@@ -1,4 +1,4 @@
-.table-of-contents {
+.list-container {
   padding: 1rem;
   background-color: #351150;
   color: white;
@@ -10,9 +10,9 @@
   a {
     line-height: 1.75rem;
   }
-}
 
-.table-of-contents-list {
-  padding-top: 1rem;
-  list-style: none;
+  .default-list {
+    padding-top: 1rem;
+    list-style: none;
+  }
 }
