--- a/src/components/layouts/page/page.scss
+++ b/src/components/layouts/page/page.scss
@@ -1,5 +1,7 @@
 .page-layout {
   display: flex;
-  align-items: center;
+  //align-items: center;
   justify-content: center;
+  background-color: #230A35;
+  color: white;
 }
