--- a/src/components/layouts/side-panel/side-panel.scss
+++ b/src/components/layouts/side-panel/side-panel.scss
@@ -1,16 +1,14 @@
 @import "./../../../styles/util.scss";
 
-.page-content {
+.side-panel {
   //padding
-  max-width: 739px;
-  width: 66%;
-  padding: 2rem 2.5rem;
+  max-width: 335px;
+  width: 33%;
+  padding: 2rem 0.5rem;
   min-height: 100vh;
 
   @include large-mobile-view() {
-    width: 100%;
-    padding: 1.5rem;
-    max-width: 768px;
+    display: none;
   }
 
   //theme properties
