--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -9,3 +9,14 @@
     line-height: 1.375rem;
     letter-spacing: -0.02rem;
 }
+
+// Wordpress + Storybook Default Text Styles
+.wp-title {
+    color: white;
+    padding: 1rem 0rem;
+}
+
+.wp-block-heading {
+    color: white;
+    padding: 0.75rem 0rem;
+}
