--- a/src/components/core/searchbar/searchbar.scss
+++ b/src/components/core/searchbar/searchbar.scss
@@ -1,4 +1,4 @@
-@import "./../../../styles/typography.scss";
+@import "./../../../styles/variables/typography.scss";
 
 .searchbar-container {
   display: flex;
