feat: move tpyo styles, add effects , restructure views

--- a/src/components/core/blog-card/blog-card.scss
+++ b/src/components/core/blog-card/blog-card.scss
@@ -1,10 +1,18 @@
+@import "./../../../styles/variables/effects.scss";
+
 .blog-card {
     width: auto;
-    background-color: #351150;
+    background-color: var(--secondary-dark);
     color: white;
+    @include shadow;
+    @include zoom;
 
     .card-bottom {
         padding: 1.5rem;
+    }
+
+    h3 {
+        padding-bottom: 0.5rem;
     }
 
     p {
