--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,22 +1,16 @@
-@mixin nav-title {
-    font-weight: 400;
-    font-size: 1.5rem;
-}
-
-@mixin default-text {
-    font-size: 1rem;
-    font-family: Inter;
-    line-height: 1.375rem;
-    letter-spacing: -0.02rem;
-}
-
 // Wordpress + Storybook Default Text Styles
 .wp-title {
     color: white;
-    padding: 1rem 0rem;
 }
 
 .wp-block-heading {
+    display: flex;
+    align-items: center;
     color: white;
-    padding: 0.75rem 0rem;
+}
+
+h3{
+    &.wp-block-heading {
+        color: var(--primary-light);
+    }
 }
