fix: mobile height, logo link, close sidebar click

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -43,6 +43,7 @@
 //padding inbetween items on page
 .home-page,
 .blog-page {
+    height: auto;
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
