--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -44,6 +44,7 @@
 .home-page,
 .blog-page {
     height: auto;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
