--- a/src/components/core/nav-links/nav-links.scss
+++ b/src/components/core/nav-links/nav-links.scss
@@ -15,13 +15,11 @@
 
   //display links, in a col format in the overlay 
   .mobile-links {
-    display: flex;
-    flex-direction: column;
+    display: block;
     color: white;
     margin-top: 4rem;
     //align-items: center;
     margin-left: 1.3rem;
-    gap: 0.75rem;
   }
 }
 
@@ -50,9 +48,10 @@
 
 .mobile-bars {
   width: 2rem;
+  margin-right:0.5rem;
   @include mobile-show;
 
   //clickable and always appears ontop
   cursor: pointer;
-  z-index: 99;
+  z-index: 9;
 }
