feat: remove duplicate styles

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,7 +2,7 @@
 
 //import global scss styles
 @import './../styles/typography.scss';
-@import './../styles/layout.scss';
+@import './../styles/pages.scss';
 @import './../styles/variables/colors.scss';
 
 
