fix: labels and heading spacing/alignment

--- a/src/components/core/rating-icons/rating-icons.scss
+++ b/src/components/core/rating-icons/rating-icons.scss
@@ -1,6 +1,7 @@
 .rating-icon-container {
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
   gap: 0.3rem;
   font-weight: 600;
   width: 10rem;
