--- a/src/components/core/nav-links/nav-links.scss
+++ b/src/components/core/nav-links/nav-links.scss
@@ -15,7 +15,8 @@
 
   //display links, in a col format in the overlay 
   .mobile-links {
-    display: block;
+    display: flex;
+    flex-direction: column;
     color: white;
     margin-top: 4rem;
     //align-items: center;
@@ -36,7 +37,7 @@
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.9);
     overflow-x: hidden;
-    transition: 0.5s;
+    transition:0.1ms
   }
 }
 
@@ -48,7 +49,7 @@
 
 .mobile-bars {
   width: 2rem;
-  margin-right:0.5rem;
+  margin-right: 0.5rem;
   @include mobile-show;
 
   //clickable and always appears ontop
